--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
-        <div class="right-icon">NI</div> 
+        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">NI</div> 
     </header>
 
     <section id="home" class="hero">
@@ -57,7 +57,7 @@
         <p>Veja os destinos que os nossos clientes mais adoraram. Não perca estas oportunidades!</p>
         <div class="pacote-list home-teaser-grid">
             <div class="pacote-card">
-                <img src="https://via.placeholder.com/300x200/4A3B95/FFFFFF?text=Grécia" alt="Ilhas Gregas">
+                <img src="https://via.placeholder.com/300x200/4A3B95/FFFFFF?text=Grécia" alt="Ilhas Gregas" loading="lazy">
                 <div class="pacote-info">
                     <h3>Atenas & Ilhas Gregas</h3>
                     <p>8 dias de história e praias paradisíacas.</p>
@@ -66,7 +66,7 @@
                 </div>
             </div>
              <div class="pacote-card">
-                <img src="https://via.placeholder.com/300x200/4A3B95/FFFFFF?text=Tailândia" alt="Templos Tailândia">
+                <img src="https://via.placeholder.com/300x200/4A3B95/FFFFFF?text=Tailândia" alt="Templos Tailândia" loading="lazy">
                 <div class="pacote-info">
                     <h3>Aventuras na Tailândia</h3>
                     <p>15 dias de cultura, mercados e selvas.</p>
@@ -90,10 +90,10 @@
     <footer class="rich-footer">
         <div class="container text-center"> 
             <div class="social-links"> 
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="SoundCloud"><i class="fab fa-soundcloud"></i></a>
             </div>
             <div class="text-xs">
                 <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
