--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
-        <div class="right-icon">NI</div> 
+        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">NI</div> 
     </header>
 
     <section id="sobre" class="institucional container">
@@ -70,20 +70,20 @@
     <section id="faq" class="faq container">
         <h2>Perguntas Frequentes</h2>
         <div class="faq-item">
-            <button class="faq-question">Quais são as opções de pagamento?</button>
-            <div class="faq-answer">
+            <button class="faq-question" aria-expanded="false">Quais são as opções de pagamento?</button>
+            <div class="faq-answer hidden">
                 <p>Aceitamos Multibanco, MB WAY, Transferência Bancária e todos os principais cartões de crédito. Oferecemos opções de pagamento flexível para viagens a longo prazo.</p>
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">Os pacotes incluem seguro de viagem?</button>
-            <div class="faq-answer">
+            <button class="faq-question" aria-expanded="false">Os pacotes incluem seguro de viagem?</button>
+            <div class="faq-answer hidden">
                 <p>Todos os nossos pacotes Advanced incluem uma cobertura base de seguro. Opções de cobertura premium estão disponíveis no momento da reserva.</p>
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">Posso cancelar ou alterar a minha reserva?</button>
-            <div class="faq-answer">
+            <button class="faq-question" aria-expanded="false">Posso cancelar ou alterar a minha reserva?</button>
+            <div class="faq-answer hidden">
                 <p>A nossa política varia consoante o pacote e o prazo de cancelamento. Consulte os termos e condições específicos para o seu pacote ou contacte a nossa equipa.</p>
             </div>
         </div>
@@ -92,10 +92,10 @@
     <footer class="rich-footer">
         <div class="container text-center"> 
             <div class="social-links"> 
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="SoundCloud"><i class="fab fa-soundcloud"></i></a>
             </div>
             <div class="text-xs">
                 <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
