--- a/servicos.html
+++ b/servicos.html
@@ -48,16 +48,15 @@
             <div class="social-links"> 
                 <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank" class="social-icon" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                <a href="#" target="_blank" class="social-icon" aria-label="SoundCloud"><i class="fab fa-soundcloud"></i></a>
+                
             </div>
             <div class="text-xs">
-                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
                 <p class="mt-1">Website desenvolvido por 
                     <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
                         target="_blank" 
                         class="developer-link">
-                        [Seu Nome].
+                        Nadia Irina.
                     </a>
                 </p>
             </div>
