--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Início - Atlas Viagens</title>
+    <title> Início | Atlas Viagens</title>
     <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Pacote Advanced.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
