--- a/galeria.html
+++ b/galeria.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-       
+       <a href="index.html" class="logo">Atlas Viagens</a>
         <nav>
             <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
