--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">Atlas Viagens</a>
+        <a href="index.html" class="logo-link">
+        <img src="atlas.png" alt="Atlas Viagens Logótipo" class="logo-img">
+    </a>
         <nav>
             <a href="index.html">Início</a>
             <a href="sobre.html">Sobre</a>
