--- a/servicos.html
+++ b/servicos.html
@@ -12,25 +12,24 @@
 <body>
     <header>
         <a href="index.html" class="logo-link">
-        <img src="atlas.png" alt="Atlas Viagens Logo" class="logo-img">
-    </a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="servicos.html">Pacotes</a>
-        <a href="galeria.html">Galeria</a>
-        <a href="contacto.html" class="btn-contacto">Contacto</a>
-    </nav>
-    <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">
-        <i class="fas fa-user-circle"></i>
-        <i class="fas fa-bars"></i>
-    </div>
+            <img src="atlas.png" alt="Atlas Viagens Logo" class="logo-img">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="servicos.html">Pacotes</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="contacto.html" class="btn-contacto">Contacto</a>
+        </nav>
+        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">
+            <i class="fas fa-user-circle"></i>
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
 
     <section id="servicos" class="pacotes container">
         <h2>Pacotes de Viagem em Destaque</h2>
-        <p></p>
-
+        
         <div class="search-bar">
             <input type="text" id="destino-search" placeholder="Buscar por Destino..." oninput="filtrarPacotesDebounced()">
             <select id="filtro-preco" onchange="filtrarPacotesDebounced()">
@@ -42,7 +41,46 @@
         </div>
 
         <div class="pacote-list" id="pacote-list">
+            <div class="pacote-card">
+                <img src="imagens/bali.jpg" alt="Viagem para Bali">
+                <div class="pacote-info">
+                    <h3>Bali</h3>
+                    <p>7 dias de relaxamento e cultura.</p>
+                    <p class="price">€1500</p>
+                    <button class="cta-button">Ver Detalhes</button>
+                </div>
             </div>
+
+            <div class="pacote-card">
+                <img src="imagens/paris.jpg" alt="Viagem para Paris">
+                <div class="pacote-info">
+                    <h3>Paris</h3>
+                    <p>Romance e história em 5 dias.</p>
+                    <p class="price">€980</p>
+                    <button class="cta-button">Ver Detalhes</button>
+                </div>
+            </div>
+
+            <div class="pacote-card">
+                <img src="imagens/nova-iorque.jpg" alt="Viagem para Nova Iorque">
+                <div class="pacote-info">
+                    <h3>Nova Iorque</h3>
+                    <p>A cidade que nunca dorme.</p>
+                    <p class="price">€1800</p>
+                    <button class="cta-button">Ver Detalhes</button>
+                </div>
+            </div>
+
+            <div class="pacote-card">
+                <img src="imagens/porto.jpg" alt="Viagem para Porto">
+                <div class="pacote-info">
+                    <h3>Porto</h3>
+                    <p>Escapada de fim de semana na Invicta.</p>
+                    <p class="price">€450</p>
+                    <button class="cta-button">Ver Detalhes</button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="rich-footer">
@@ -50,7 +88,6 @@
             <div class="social-links"> 
                 <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                
             </div>
             <div class="text-xs">
                 <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
